[gd_scene load_steps=13 format=3 uid="uid://8wd0l1hflkhj"]

[ext_resource type="Script" uid="uid://blsm3myal3yqu" path="res://scripts/fast_car.gd" id="1_b7var"]
[ext_resource type="PackedScene" uid="uid://bsx66kdprfr33" path="res://assets/Models/Car2_fixed.glb" id="2_wc1vb"]
[ext_resource type="AudioStream" uid="uid://ceakeowew1ph8" path="res://assets/Audio/engine-loop-1-normalized.wav" id="3_eu8ed"]
[ext_resource type="Script" uid="uid://f2pqgath66f4" path="res://scripts/hud.gd" id="4_4pere"]
[ext_resource type="AudioStream" uid="uid://duw228b045c13" path="res://assets/Audio/stunt-rally-sounds/sounds/crash/09.wav" id="4_o4stx"]

[sub_resource type="Curve" id="Curve_jkobu"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(0.115894, 0.0645287), 0.0, 0.0, 0, 0, Vector2(0.750869, 0.772446), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8ofd4"]
height = 0.0625
radius = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_joeye"]
size = Vector3(0.8, 0.4, 1.9)

[sub_resource type="BoxMesh" id="BoxMesh_k3yy4"]
size = Vector3(1, 0.5, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ainy"]
bg_color = Color(0, 0, 0, 0.254902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6hdu"]
bg_color = Color(0.418309, 0.907293, 0.464709, 1)

[sub_resource type="Theme" id="Theme_hk1pr"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_1ainy")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_n6hdu")

[node name="FastCar" type="CharacterBody3D" node_paths=PackedStringArray("ground_rays", "cameras")]
script = ExtResource("1_b7var")
accel_curve = SubResource("Curve_jkobu")
ground_rays = [NodePath("GroundRays/Ray-FL"), NodePath("GroundRays/Ray-FR"), NodePath("GroundRays/Ray-BR"), NodePath("GroundRays/Ray-BL")]
cameras = [NodePath("BumperCam"), NodePath("HoodCam"), NodePath("ChaseCamParent/ChaseCam"), NodePath("TopCam"), NodePath("ChaseCamParent/SideCam")]

[node name="Collision-FL" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.315, -0.1, -0.575)
shape = SubResource("CylinderShape3D_8ofd4")

[node name="Collision-BL" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.315, -0.1, 0.575)
shape = SubResource("CylinderShape3D_8ofd4")

[node name="Collision-FR" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.315, -0.1, -0.575)
shape = SubResource("CylinderShape3D_8ofd4")

[node name="Collision-BR" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.315, -0.1, 0.575)
shape = SubResource("CylinderShape3D_8ofd4")

[node name="Collision-Body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0.0500002)
shape = SubResource("BoxShape3D_joeye")

[node name="BumperCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -0.959)

[node name="HoodCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2421, -0.54)

[node name="TopCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0)

[node name="CarModelContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2499, 0)

[node name="CarModel" parent="CarModelContainer" instance=ExtResource("2_wc1vb")]

[node name="DebugBlock" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_k3yy4")

[node name="TestRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.4, 0)

[node name="GroundRays" type="Node3D" parent="."]

[node name="Ray-FL" type="RayCast3D" parent="GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -0.0999999, -0.6)
enabled = false

[node name="Ray-FR" type="RayCast3D" parent="GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.0999999, -0.6)
enabled = false

[node name="Ray-BL" type="RayCast3D" parent="GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -0.0999999, 0.6)
enabled = false

[node name="Ray-BR" type="RayCast3D" parent="GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.0999999, 0.6)
enabled = false

[node name="ChaseCamParent" type="Node3D" parent="."]

[node name="ChaseCam" type="Camera3D" parent="ChaseCamParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 1.8)

[node name="SideCam" type="Camera3D" parent="ChaseCamParent"]
transform = Transform3D(0.982599, -0.0265679, 0.183829, 0.028167, 0.999585, -0.00609304, -0.18359, 0.0111649, 0.982939, 0.799838, 0.375878, 1.24912)

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_eu8ed")
volume_db = -10.0
doppler_tracking = 2

[node name="CrashSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_o4stx")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_4pere")

[node name="EngineContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0

[node name="GearBox" type="Panel" parent="HUD/EngineContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8

[node name="GearText" type="Label" parent="HUD/EngineContainer/GearBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speedometer" type="ProgressBar" parent="HUD/EngineContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_hk1pr")
value = 50.0
show_percentage = false

[node name="SpeedText" type="Label" parent="HUD/EngineContainer/Speedometer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tachiometer" type="ProgressBar" parent="HUD/EngineContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_hk1pr")
value = 50.0
show_percentage = false

[node name="RPMText" type="Label" parent="HUD/EngineContainer/Tachiometer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 150.0
grow_vertical = 0

[node name="QueuedTurnBar" type="ProgressBar" parent="HUD/TurnContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_hk1pr")
value = 50.0
show_percentage = false

[node name="TurnText" type="Label" parent="HUD/TurnContainer/QueuedTurnBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 1.0
offset_bottom = 11.5
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnBar" type="ProgressBar" parent="HUD/TurnContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_hk1pr")
value = 50.0
show_percentage = false

[node name="TurnText" type="Label" parent="HUD/TurnContainer/TurnBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
